# drl_autonomous_exploration

./: .gitignore  README.md
aslam/: CMakeLists.txt  package.xml  setup.py
aslam/config/: RL.yaml  rtabmap.yaml  task.yaml
aslam/launch/: start_testing.launch  start_training.launch
aslam/src/aslam/openai_ros/: robot_gazebo_env.py
aslam/src/aslam/openai_ros/robot_envs/: lilybot_env.py
aslam/src/aslam/openai_ros/task_envs/lilybot/: lilybot_world.py
aslam/src/aslam/rainbow/: test_model.py  train_model.py
aslam/src/aslam/rainbow/pkgs/: agent.py  memory.py  test.py  validate.py
aslam/src/aslam/rainbow/pkgs/Model/: model.py
lily_bot/: package.xml
lily_bot/launch/: aslam.launch  rtabmap.launch
lily_bot/rviz/: aslam.rviz
lily_bot/urdf/: lily_bot.gazebo.xacro  lily_bot.urdf.xacro
lily_bot/worlds/: Env2.world
lily_bot/worlds/models/Env2_Obstacles/Env2_Obstacles/: model.config  model.sdf
lily_bot/worlds/models/Env2_Walls/Env2_Walls/: model.config  model.sdf
